<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="my_profile">My Profile</string>
    <string name="about_alc">About Alc</string>
    <string name="image">Image</string>
    <string name="track_android">Track: Android</string>
    <string name="country_kenya">Country: Kenya</string>
    <string name="email_swailerc23_gmail_com">Email: swailerc23@gmail.com</string>
    <string name="phone_no_254704723789">Phone No: +254704723789</string>
    <string name="slack_user_name_collins_swai">Slack user name: @Collins Swai</string>
</resources>
